compiler/tests/fixtures/invalid/semantics/assignment_trailing_fail_safe.viv
// Invalid: trailing fail-safe on assignment LHS

action bad-fail-safe:
    roles:
        @actor:
            as: initiator
    effects:
        @actor.mood? = 5
